language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_unqualified_variant_in_other_module_adds_an_unqualified_import_if_other_variants_are_unqualified.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport other.{ Wibble }\n\npub fn main() -> other.Wibble {\n  let assert Wobble = new()\n}\n\npub fn new() -> other.Wibble { todo }\n"
---
----- BEFORE ACTION

import other.{ Wibble }

pub fn main() -> other.Wibble {
  let assert Wobble = new()
             ↑             
}

pub fn new() -> other.Wibble { todo }


----- AFTER ACTION
// --- Edits applied to module 'app'

import other.{ Wibble, Wobble }

pub fn main() -> other.Wibble {
  let assert Wobble = new()
}

pub fn new() -> other.Wibble { todo }

// --- Edits applied to module 'other'
pub type Wibble {
  Wibble
  Wobble
}
