language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_variant_with_fields_in_same_module.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble\n}\n\npub fn main() -> Wibble {\n  Wobble(1)\n}"
---
----- BEFORE ACTION

pub type Wibble {
  Wibble
}

pub fn main() -> Wibble {
  Wobble(1)
  ↑        
}


----- AFTER ACTION

pub type Wibble {
  Wibble
  Wobble(Int)
}

pub fn main() -> Wibble {
  Wobble(1)
}
