language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_variant_with_labels_in_same_module.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble\n}\n\npub fn main() -> Wibble {\n  Wobble(\"hello\", label: 1)\n}"
---
----- BEFORE ACTION

pub type Wibble {
  Wibble
}

pub fn main() -> Wibble {
  Wobble("hello", label: 1)
  ↑                        
}


----- AFTER ACTION

pub type Wibble {
  Wibble
  Wobble(String, label: Int)
}

pub fn main() -> Wibble {
  Wobble("hello", label: 1)
}
