language-server/src/tests/snapshots/gleam_language_server__tests__action__generating_function_in_other_module_uses_labels.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.wibble(\"Unlabelled\", int: 1, bool: True)\n}\n"
---
----- BEFORE ACTION

import wibble

pub fn main() {
  wibble.wibble("Unlabelled", int: 1, bool: True)
         ↑                                       
}


----- AFTER ACTION
// --- Edits applied to module 'wibble'


pub fn wibble(string: String, int int: Int, bool bool: Bool) -> a {
  todo
}
